2009-05-23  Vivek Dasmohapatra  <vivek@etla.org>

	* icons/blocked.png: new icon.

	* elisp/elim.el (elim-toggle-user-blocked): implement toggle privacy op

	* elisp/garak.el (garak-icon-tags): new icon and tag
	(garak-buddy-list-node-command): implement toggle privacy menu op
	(garak-buddy-list-choose-icon): prioritise blocked icon over status icon

	* handlers/buddy_privacy.c (_h_elim_buddy_privacy): toggle/set blocked

	* handlers/add_buddy.c (_h_elim_add_buddy): zap clones in blist

	* elim-rpc.h: consolidate definition of utility macros
	(FETCH_ACCOUNT)      : fetch account by uid
	(FIND_ACCOUNT)       : account by uid or name+proto
	(BNODE_ACCOUNT_CHECK): buddy account/supplied account match
	(HANDLER_FAIL)       : generic free args and bail out of handler

	* handlers/remove_buddy.c (_h_elim_remove_buddy) : new macros

	* handlers/buddy_menu_action.c (_h_elim_buddy_menu_action)    : ibid

	* handlers/buddy_menu.c (_h_elim_buddy_menu)                  : ibid

	* handlers/buddy_info.c (_h_elim_buddy_info)                  : ibid

	* handlers/account_menu_action.c (_h_elim_account_menu_action): ibid

	* handlers/account_menu.c (_h_elim_account_menu)              : ibid

2009-05-22  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/elim.el (elim-data-to-proto): binary data protocol serialiser
	(elim-atom-to-proto): detect and serialise binary data (contains NULs)

	* elisp/garak.el (garak-maybe-remove-account): new acct menu command
	(garak-account-list-node-command): new account menu command handled
	(garak-buddy-list-node-widget)   : implement new gui command

2009-05-20  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el (garak-error-handler): try to show async errors to user

	* elisp/elim.el (elim-debug): no undo info in debug buffer
	(elim-default-fail-handler): errors to default fail handler if available
	(elim-call-client-handler) : ibid

	* ui_ops/eventloop_ui_ops.c: remove input_get_error, harmful ui op defun
